tests/transpiler/x/java/go_auto.error
exit status 1
Main.java:4: error: cannot find symbol
        System.out.println(testpkg.Add(2, 3));
                           ^
  symbol:   variable testpkg
  location: class Main
Main.java:5: error: cannot find symbol
        System.out.println(testpkg.Pi);
                           ^
  symbol:   variable testpkg
  location: class Main
Main.java:6: error: cannot find symbol
        System.out.println(testpkg.Answer);
                           ^
  symbol:   variable testpkg
  location: class Main
3 errors
