tests/transpiler/x/java/go_auto.java
public class Main {

    public static void main(String[] args) {
        System.out.println(testpkg.Add(2, 3));
        System.out.println(testpkg.Pi);
        System.out.println(testpkg.Answer);
    }
}
